--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Private page</title>
+    <title>Admin page</title>
 </head>
 <body>
-    <h1>Private page</h1>
+    <h1>Admin page</h1>
 </body>
 </html>
